MDEV-16010 Too many rows with AS OF point_in_the_past_or_NULL